test/configCases/errors/self-reexport/c1.js
export { something } from "./c2";
